[gd_scene load_steps=28 format=3 uid="uid://ja6rkwks8rpm"]

[ext_resource type="Script" path="res://game/entities/enemies/frog/frog.gd" id="1_nx0si"]
[ext_resource type="Texture2D" uid="uid://yrf566hbxxq1" path="res://game/assets/sprites/entities/enemies/frog/attack/frog-jump-2.png" id="2_t8iwe"]
[ext_resource type="Texture2D" uid="uid://bn8f3fw0swbxf" path="res://game/assets/sprites/entities/enemies/frog/idle/frog-idle-1.png" id="3_f3phx"]
[ext_resource type="Texture2D" uid="uid://cu84cfflxkfm7" path="res://game/assets/sprites/entities/enemies/frog/idle/frog-idle-2.png" id="4_nkwne"]
[ext_resource type="Texture2D" uid="uid://c55n6qkojw2uq" path="res://game/assets/sprites/entities/enemies/frog/idle/frog-idle-3.png" id="5_t6jrc"]
[ext_resource type="Script" path="res://game/utils/state_machine.gd" id="6_pidno"]
[ext_resource type="Texture2D" uid="uid://cgbhpp1emxx6j" path="res://game/assets/sprites/entities/enemies/frog/idle/frog-idle-4.png" id="6_t103v"]
[ext_resource type="Script" path="res://game/entities/enemies/frog/states/idle_frog_state.gd" id="7_4c14k"]
[ext_resource type="Texture2D" uid="uid://ci0d3s00g5c53" path="res://game/assets/sprites/entities/enemies/frog/attack/frog-jump-1.png" id="7_mayui"]
[ext_resource type="Texture2D" uid="uid://c6rq8ra6e23ki" path="res://game/assets/sprites/entities/enemies/frog/attack/frog-jump-3.png" id="8_vjrer"]
[ext_resource type="Script" path="res://game/entities/enemies/frog/states/attack_frog_state.gd" id="8_vtarw"]
[ext_resource type="Texture2D" uid="uid://bt7q7e5thql6e" path="res://game/assets/sprites/entities/enemies/frog/death/frog-death-0.png" id="9_vnr4u"]
[ext_resource type="Texture2D" uid="uid://dj5dqtb37kexu" path="res://game/assets/sprites/entities/enemies/enemy-death/enemy-death-1.png" id="10_6b4rl"]
[ext_resource type="Texture2D" uid="uid://d0tqov1v74akt" path="res://game/assets/sprites/entities/enemies/enemy-death/enemy-death-2.png" id="11_vxb3b"]
[ext_resource type="Texture2D" uid="uid://yvvbqefwilg5" path="res://game/assets/sprites/entities/enemies/enemy-death/enemy-death-3.png" id="12_ieem7"]
[ext_resource type="Texture2D" uid="uid://b8gmpvwjvktxq" path="res://game/assets/sprites/entities/enemies/enemy-death/enemy-death-4.png" id="13_lidxm"]
[ext_resource type="Texture2D" uid="uid://dh4rwhjrvpyd8" path="res://game/assets/sprites/entities/enemies/enemy-death/enemy-death-5.png" id="14_cvl38"]
[ext_resource type="Texture2D" uid="uid://comtqdljfk6bp" path="res://game/assets/sprites/entities/enemies/enemy-death/enemy-death-6.png" id="15_lmo3k"]
[ext_resource type="Script" path="res://game/entities/enemies/frog/frog_move.gd" id="16_iyxgq"]
[ext_resource type="Script" path="res://game/entities/enemies/frog/states/dying_frog_state.gd" id="20_cvfcs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ebkuy"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_voho0"]
size = Vector2(249, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eciqw"]
size = Vector2(20, 11.5)

[sub_resource type="Animation" id="Animation_lde36"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_t8iwe"), ExtResource("7_mayui"), ExtResource("8_vjrer")]
}

[sub_resource type="Animation" id="Animation_pbn8e"]
resource_name = "Death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("9_vnr4u"), ExtResource("10_6b4rl"), ExtResource("11_vxb3b"), ExtResource("12_ieem7"), ExtResource("13_lidxm"), ExtResource("14_cvl38"), ExtResource("15_lmo3k")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_6f63d"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_f3phx"), ExtResource("4_nkwne"), ExtResource("5_t6jrc"), ExtResource("6_t103v")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_icif4"]
_data = {
"Attack": SubResource("Animation_lde36"),
"Death": SubResource("Animation_pbn8e"),
"Idle": SubResource("Animation_6f63d")
}

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_nx0si")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -11)
texture = ExtResource("3_f3phx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_ebkuy")

[node name="PlayableDetection" type="Area2D" parent="."]
position = Vector2(0, -9)
monitorable = false

[node name="PlayableDetectionCollision" type="CollisionShape2D" parent="PlayableDetection"]
position = Vector2(-0.5, -35)
shape = SubResource("RectangleShape2D_voho0")

[node name="KillZone" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KillZone"]
polygon = PackedVector2Array(-7, -13, -8, -15, -7, -17, -3, -17, 0, -18, 5, -18, 7, -16, 7, -14, 5, -13, -3, -13)

[node name="AttackZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_eciqw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_icif4")
}

[node name="FrogMove" type="Node" parent="."]
script = ExtResource("16_iyxgq")

[node name="FrogStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("6_pidno")
current_state = NodePath("IdlingFrogState")

[node name="IdlingFrogState" type="Node" parent="FrogStateMachine"]
script = ExtResource("7_4c14k")
animation_name = "Idle"
run_speed = 75.0

[node name="AttackingFrogState" type="Node" parent="FrogStateMachine"]
script = ExtResource("8_vtarw")
animation_name = "Attack"
run_speed = 75.0

[node name="DyingFrogState" type="Node" parent="FrogStateMachine"]
script = ExtResource("20_cvfcs")
animation_name = "Death"

[connection signal="body_entered" from="PlayableDetection" to="." method="_on_playable_detection_body_entered"]
[connection signal="body_exited" from="PlayableDetection" to="." method="_on_playable_detection_body_exited"]
[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
